Type Error - Corrected to "rc-update add vmware default" from "rc-update add vmware defualt"

--- a/VMware_Player.mw
+++ b/VMware_Player.mw
@@ -16,7 +16,7 @@ Some modules from {{Package|app-emulation/vmware-modules}} must be loaded. Start
 {{RootCmd|/etc/init.d/vmware start}}
 
 To optionally have load on boot:
-{{RootCmd|rc-update add vmware defualt}}
+{{RootCmd|rc-update add vmware default}}
 
 Add user to ''vmware'' group:
 {{RootCmd|gpasswd -a YOURUSER vmware}}
