/* G2CONF and src_configure */ add example conversion per plaes request

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -23,6 +23,40 @@ This variable has a long history. Recently, on gentoo-dev mailing list, someone 
 
 In response to that valid concern, the Gnome team updated its policy to always define a src_configure when there is something to configure and '''pass configure switch to gnome2_src_configure function'''. Since G2CONF had no other use than defining configure information in pkg_setup, most of its use if now gone and '''it should be removed from ebuilds'''.
 
+For example, fictitious ebuild:
+{{File|foo-1.ebuild||<pre>
+[...]
+src_configure() {
+    DOCS="AUTHORS README NEWS THANKS TODO"
+    if [[ ${PV} = 9999 ]]; then
+        G2CONF="${G2CONF} --enable-debug"
+    fi
+    G2CONF="${G2CONF}
+        --disable-schemas-compile
+        --disable-strict-cc
+        VALAC=$(type -P valac-0.18)
+        VAPIGEN=$(type -P vapigen-0.18)
+    "
+    gnome2_src_configure
+}</pre>}}
+
+will translate to:
+{{File|foo-1.ebuild||<pre>
+[...]
+src_configure() {
+    local myconf
+    DOCS="AUTHORS README NEWS THANKS TODO"
+    if [[ ${PV} = 9999 ]]; then
+        myconf="${myconf} --enable-debug"
+    fi
+    gnome2_src_configure \
+        --disable-schemas-compile \
+        --disable-strict-cc \
+        VALAC=$(type -P valac-0.18) \
+        VAPIGEN=$(type -P vapigen-0.18) \
+        ${myconf}
+}</pre>}}
+
 === GCONF_DEBUG ===
 
 Policy being defined at [https://bugs.gentoo.org/show_bug.cgi?id=270919 bug #270919].
