/* Introduction */ less stringent warning about laptops

--- a/KDE%2FKDEPIM-4.7_upgrade.mw
+++ b/KDE%2FKDEPIM-4.7_upgrade.mw
@@ -7,7 +7,7 @@ On the initial startup of the new KDE PIM suite, the address book and calendar d
 
 Note that the new akonadi backend does not absorb the raw e-mail data.  So if the database gets corrupted, you will not lose all of your precious e-mails.  See this [http://blogs.kde.org/node/4503 KDE Akonadi blog post] for more details.
 
-{{Warning|It is not really advisable yet to upgrade KDEPIM on laptops and other devices with an unstable internet connection, as the Akonadi backend tends to crash in these situations.}}
+{{Warning|It is not really advisable yet to upgrade KDEPIM on laptops and other devices with an unstable internet connection, as the Akonadi backend tends to hang every now and then in these situations. Your mileage may vary.}}
 
 == Backing Up ==
 The move to KMail2 means that email accounts and information are now also using Akonadi's storage and data system. The migration process for this will occur when KMail or Kontact is first run, and can be skipped for those who prefer to create their accounts manually. Unfortunately, at this time, the migration tool does not properly run when you select the Migrate option, see {{Bug|857828|site=launchpad}}
