Correcting a small typo.

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -7,7 +7,7 @@ This page is intended to link or to write down Gnome team policies about its own
 Gnome team tries to stay up-to-date with regard to the best available EAPI. Currently this is '''EAPI 5'''.
 
 Gnome team goal is to have all ebuilds use that EAPI and make best use of its features such as:
-* sublots
+* subslots
 * default configure flags
 * default installed documentation (generally no need to define DOCS)
 
