*Empty MediaWiki Message*

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -28,6 +28,9 @@ CFLAGS="-march=core2 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
 
+== Graphite / LTO / OpenMP ==
+Some optimizations are hard to enable for a reason. If you don't understand how they work, then you should probably leave that to the packages themselves. Enabling everything at once will either break packages, cause segmentation faults or break GCC or Glibc, rendering the system useless until those packages are overwritten by the stage3 archive. So please, don't try this at home. To enable the "holy grail" combo, first install Gentoo with as little packages as possible. Be sure to use GCC newer than 4.7.2. Once it is installed, edit package.mask to block newer and older version of GCC. At this point, use -O2 and disable all other non-default flags. The system will get fragile, so some packages need to be frozen in time. Once this is done, use "emerge -e world" twice to make sure the system is compiled using itself. GCC need to be compiled using libraries compiled with that very GCC. This may seem useless, but it is not, skip this and you will get "undefined references to gomp" errors. It is now time to emerge dev-libs/cloog and dev-libs/cloog-ppl. Once this is done, enable graphite CFLAGS and USE flag. Emerge gcc again, then "emerge -e world" again to make sure all packages are built using it. Again, an half updated system will cause breakage later on. After this, it is now time to turn ",-fopenmp -lgomp" in the LDFLAGS, -fopenmp, -floop-parallelize-all and -floop-parallelize-loops=4 to the CFLAGS (and add openmp to the USE flag while you remember it). I think it is safe to also enable LTO at this point. The system resulting from the new "emerge -e world" should be fairly stable with minimal packages break. If you still experience massive emerge failure or non-working system, you probably skiped one of these step or I (Elv13) forgot one when I wrote these advices. Enjoy your new ricer credentials and all the bling, you are a real one.
+
 == See also ==
 * [[Safe CFLAGS]]
 * [http://www.gentoo.org/doc/en/gcc-optimization.xml Gentoo Compilation Optimization Guide]
