--- a/KDE%2FKDEPIM-4.7_upgrade.mw
+++ b/KDE%2FKDEPIM-4.7_upgrade.mw
@@ -1,7 +1,7 @@
 This guide has been shamelessly copied from the [https://wiki.kubuntu.org/OneiricOcelot/Final/Kubuntu/Kmail2 Ubuntu Wiki]. Please improve and adapt it for Gentoo!
 
 == Introduction ==
-With KDEPIM-4.6 and 4.7, KDE's Personal Information Management suite, Kontact, has seen a major move to the new Akonadi system. This will mean any users of previous versions of of the PIM software will need to have their data migrated to the new system. This includes contacts from KAddressBook, events from KOrganizer, and email messages and accounts from KMail. Unfortunately, this process does not work automatically at this time, and may not be 100% successful when it is performed manually.
+With KDEPIM-4.6 and later, KDE's Personal Information Management suite, Kontact, has seen a major move to the new Akonadi system. This will mean any users of previous versions of of the PIM software will need to have their data migrated to the new system. This includes contacts from KAddressBook, events from KOrganizer, and email messages and accounts from KMail. Unfortunately, this process does not work automatically at this time, and may not be 100% successful when it is performed manually.
 
 On the initial startup of the new KDE PIM suite, the address book and calendar data will be migrated automatically.
 
