--- a/KDE%2FKDEPIM-4.7_upgrade.mw
+++ b/KDE%2FKDEPIM-4.7_upgrade.mw
@@ -5,9 +5,9 @@ With KDEPIM-4.6 and later, KDE's Personal Information Management suite, Kontact,
 
 On the initial startup of the new KDE PIM suite, the address book and calendar data will be migrated automatically.
 
-Note that the new akonadi backend does not absorb the raw e-mail data.  So if the database gets corrupted, you will not lose all of your precious e-mails.  See this [http://blogs.kde.org/node/4503 KDE Akonadi blog post] for more details.
+Note that the new akonadi backend does not absorb the raw e-mail data.  So if the database gets corrupted, you will not lose all of your precious e-mails. (It does, however, contain the disconnected imap cache.) See this [http://blogs.kde.org/node/4503 KDE Akonadi blog post] for more details.
 
-{{Warning|It is not really advisable yet to upgrade KDEPIM on laptops and other devices with an unstable internet connection, as the Akonadi backend tends to hang every now and then in these situations. Your mileage may vary.}}
+If you plan to upgrade, '''please set your akonadi backend to mysql''' beforehand, since that is the best-supported backend (and since some people claim it's the only one that really works with kmail-4.10).
 
 == Backing Up ==
 The move to KMail2 means that email accounts and information are now also using Akonadi's storage and data system. The migration process for this will occur when KMail or Kontact is first run, and can be skipped for those who prefer to create their accounts manually. Unfortunately, at this time, the migration tool does not properly run when you select the Migrate option, see {{Bug|857828|site=launchpad}}
