--- a/Usr-gentoo.mw
+++ b/Usr-gentoo.mw
@@ -1,6 +1,6 @@
 {{Lowercase title}}
 
-The '''usr-gentoo''' project maintains a repository of auto-generated Gentoo ebuilds which have been subject to the [[/usr move]]. That is, user using it should be able to get most of the executables moved off rootfs to /usr.
+The '''usr-gentoo''' project maintains a repository of auto-generated Gentoo ebuilds which have been subject to the [[:/usr move]]. That is, user using it should be able to get most of the executables moved off rootfs to /usr.
 
 {{Warning|Please note that this is ''experimental work'' and it may render your system unbootable. Use with care.}}
 
