/* GNOME2_LA_PUNT */

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -63,7 +63,10 @@ Policy being defined at [https://bugs.gentoo.org/show_bug.cgi?id=270919 bug #270
 
 === GNOME2_LA_PUNT ===
 
-Needs writing, especially with regard to behavior with EAPI=5.
+For EAPI < 5, when set to "yes" will get all .la files removed. For newer EAPIs, it relies in prune_libtool_files function from eutils.eclass, and will behave as follows:
+* When GNOME2_LA_PUNT is unset, prune_libtool_files will be run.
+* When GNOME2_LA_PUNT is set to "yes", prune_libtool_files will be run with "--modules" option.
+* When GNOME2_LA_PUNT is set to "no", it will do nothing.
 
 == gtk-doc ==
 
