/* Graphite / LTO / OpenMP */  Eh, made a few (about 50-80) English grammar corrections.

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -29,7 +29,19 @@ CXXFLAGS="${CFLAGS}"
 </pre>}}
 
 == Graphite / LTO / OpenMP ==
-Some optimizations are hard to enable for a reason. If you don't understand how they work, then you should probably leave that to the packages themselves. Enabling everything at once will either break packages, cause segmentation faults or break GCC or Glibc, rendering the system useless until those packages are overwritten by the stage3 archive. So please, don't try this at home. To enable the "holy grail" combo, first install Gentoo with as little packages as possible. Be sure to use GCC newer than 4.7.2. Once it is installed, edit package.mask to block newer and older version of GCC. At this point, use -O2 and disable all other non-default flags. The system will get fragile, so some packages need to be frozen in time. Once this is done, use "emerge -e world" twice to make sure the system is compiled using itself. GCC need to be compiled using libraries compiled with that very GCC. This may seem useless, but it is not, skip this and you will get "undefined references to gomp" errors. It is now time to emerge dev-libs/cloog and dev-libs/cloog-ppl. Once this is done, enable graphite CFLAGS and USE flag. Emerge gcc again, then "emerge -e world" again to make sure all packages are built using it. Again, an half updated system will cause breakage later on. After this, it is now time to turn ",-fopenmp -lgomp" in the LDFLAGS, -fopenmp, -floop-parallelize-all and -floop-parallelize-loops=4 to the CFLAGS (and add openmp to the USE flag while you remember it). I think it is safe to also enable LTO at this point. The system resulting from the new "emerge -e world" should be fairly stable with minimal packages break. If you still experience massive emerge failure or non-working system, you probably skiped one of these step or I (Elv13) forgot one when I wrote these advices. Enjoy your new ricer credentials and all the bling, you are a real one.
+Some optimizations are hard to enable for a reason. If you don't understand how they work, then you should consider using the default recommended Safe CFLAGS or use the package's recommended CFLAGS.
+
+Enabling everything at once will either break packages, cause segmentation faults or break GCC or Glibc; effectively rendering the system useless until those packages are overwritten by the stage3 archive. So please, don't try this at home.
+
+To enable the "Holy Grail" combo, first install Gentoo with as little packages as possible. Be sure to use GCC newer than 4.7.2. Once GCC is installed, edit package.mask to block newer and older versions of GCC. At this point, use -O2 and disable all other non-default flags. The system will get fragile, so some packages need to be frozen in time. Once this is done, use "emerge -e world" twice to make sure the system is compiled using itself. GCC needs to be compiled using libraries compiled with this GCC compiled version and using this GCC configuration. This may seem useless, but if it is skipped you will get "undefined references to gomp" errors.
+
+It is now time to emerge dev-libs/cloog and dev-libs/cloog-ppl. Once this is done, enable graphite CFLAGS and USE flag. Emerge GCC again, then "emerge -e world" again to make sure all packages are built using this version and configuration of GCC. Again, a half updated system will cause program compilation breaks or segfaults later on.
+
+Now it is now time to turn on ",-fopenmp -lgomp" within the LDFLAGS, and "-fopenmp, -floop-parallelize-all and -floop-parallelize-loops=4" within the CFLAGS.  Add openmp to the USE flags.  I think it is safe to also enable LTO at this point. The system resulting from the new "emerge -e world" should be fairly stable with minimal packages failing to compile.
+
+If you still experience massive failures while recompiling the system or world, or have a non-working system, you probably skiped one of these steps.
+
+{{Note|If your system fails to compile, you can blame Elv13 for forgotting one of the steps when he wrote this advice.}}
 
 == See also ==
 * [[Safe CFLAGS]]
