--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -1,4 +1,4 @@
-{{Stub}}
+== About CFLAGS ==
 The CFLAGS and CXXFLAGS are environment variables whose content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, these variables are set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses them.
 
 For example:
@@ -50,5 +50,6 @@ If you still experience massive failures while recompiling the system or world, 
 
 == External resources ==
 * [http://www.gnu.org/software/gcc/onlinedocs GCC Online Documentation] on GNU.org
+* [http://software.intel.com/en-us/blogs/2012/09/26/gcc-x86-performance-hints GCC x86 performance hints]
 
 [[Category:Portage]]
