added category qt

--- a/Qt%2FQt5.mw
+++ b/Qt%2FQt5.mw
@@ -47,3 +47,5 @@ Start Qt Creator and go to: '''Tools''' -> '''Options''' -> '''Build&Run''' -> '
 Start '''kmenuedit'''. Click on '''Development''', click on '''New Item''', enter ''Qt Creator 2.7.1'' [or whatever you want the entry to be named]. In '''command''' enter ''/usr/local/QtCreator-2.7.1/bin/qtcreator'', chose an icon by clicking on the square button. Press OK and you are done.
 
 Used Sources: https://qt-project.org/doc/qt-5.0/qtdoc/install-x11.html
+
+[[Category:Qt]]
