added category development

--- a/Qt%2FQt5.mw
+++ b/Qt%2FQt5.mw
@@ -49,3 +49,4 @@ Start '''kmenuedit'''. Click on '''Development''', click on '''New Item''', ente
 Used Sources: https://qt-project.org/doc/qt-5.0/qtdoc/install-x11.html
 
 [[Category:Qt]]
+[[Category:Development]]
