adjusted header levels and added source section

--- a/Qt%2FQt5.mw
+++ b/Qt%2FQt5.mw
@@ -2,15 +2,15 @@ This short tutorial explains how to install Qt5 libs and Qt Creator 2.7 in order
 
 Although there is a layman overlay I found the overlay method too complex since it requires many unmasks and dependency fiddling. With this method you install all files into two new folders. No other changes are made to your system. Later you can simply delete them and there will be no traces left, beside user configuration in your home folder. You don't have to unmask 10+ files and edit several files and possibly break something else on your machine.
 
-= Installation =
+== Installation ==
 Download the [http://download.qt-project.org/official_releases/qt/5.0/5.0.2/single/qt-everywhere-opensource-src-5.0.2.tar.gz Qt 5.0.2 sources] and the [http://download.qt-project.org/official_releases/qtcreator/2.7/2.7.1/qt-creator-2.7.1-src.tar.gz Qt Creator 2.7.1 sources]. In case you want another version, go to https://qt-project.org/downloads and look for '''tar.gz''' sources inside the paragraph below the highlighted links.
 
-== All-in-one copy and paste command ==
+=== All-in-one copy and paste command ===
 Run this in the folder where both archives are located:
 {{RootCmd|tar xvf qt-everywhere-opensource-src-5.0.2.tar.gz && cd qt-everywhere-opensource-src-5.0.2 && ./configure && make && make install && cd .. && tar xvf qt-creator-2.7.1-src.tar.gz && cd qt-creator-2.7.1-src && qmake -r && make && mkdir /usr/local/QtCreator-2.7.1 && make install INSTALL_ROOT{{=}}/usr/local/QtCreator-2.7.1}}
 
-== Step by step. (The same as above) ==
-=== Qt libs ===
+=== Step by step. (The same as above) ===
+==== Qt libs ====
 Extract archive:
 {{Cmd|tar xvf qt-everywhere-opensource-src-5.0.2.tar.gz}}
 Change into extracted directory:
@@ -23,7 +23,7 @@ Install:
 {{RootCmd|make install}}
 The default install folder is ''/usr/local/Qt-5.0.2''.
 
-=== Qt Creator ===
+==== Qt Creator ====
 Extract archive:
 {{Cmd|tar xvf qt-creator-2.7.1-src.tar.gz}}
 Change into extracted directory:
@@ -39,14 +39,15 @@ Install:
 
 The Qt Creator binary is located at ''/usr/local/QtCreator-2.7.1/bin/qtcreator''
 
-= Configuration =
-== Add Qt5 to Qt Creator ==
+== Configuration ==
+=== Add Qt5 to Qt Creator ===
 Start Qt Creator and go to: '''Tools''' -> '''Options''' -> '''Build&Run''' -> '''Qt Versions'''. Click '''Add''' on the right. Navigate to ''/usr/local/Qt-5.0.2/bin'' and choose ''qmake''. Qt Creator is now configured to use Qt5.
 
-== Optional: Add Qt Creator 2.7. to the KDE menu. ==
+=== Optional: Add Qt Creator 2.7. to the KDE menu. ===
 Start '''kmenuedit'''. Click on '''Development''', click on '''New Item''', enter ''Qt Creator 2.7.1'' [or whatever you want the entry to be named]. In '''command''' enter ''/usr/local/QtCreator-2.7.1/bin/qtcreator'', chose an icon by clicking on the square button. Press OK and you are done.
 
-Used Sources: https://qt-project.org/doc/qt-5.0/qtdoc/install-x11.html
+== Used Sources ==
+* https://qt-project.org/doc/qt-5.0/qtdoc/install-x11.html
 
 [[Category:Qt]]
 [[Category:Development]]
