--- a/Qt%2FQt5.mw
+++ b/Qt%2FQt5.mw
@@ -41,7 +41,10 @@ The Qt Creator binary is located at ''/usr/local/QtCreator-2.7.1/bin/qtcreator''
 
 == Configuration ==
 === Add Qt5 to Qt Creator ===
-Start Qt Creator and go to: '''Tools''' -> '''Options''' -> '''Build&Run''' -> '''Qt Versions'''. Click '''Add''' on the right. Navigate to ''/usr/local/Qt-5.0.2/bin'' and choose ''qmake''. Qt Creator is now configured to use Qt5.
+In Qt Creator
+* go to: '''Tools''' -> '''Options''' -> '''Build&Run''' -> '''Qt Versions'''. Click '''Add''' on the right. Navigate to ''/usr/local/Qt-5.0.2/bin'' and choose ''qmake''.
+* go to: '''Tools''' -> '''Options''' -> '''Build&Run''' -> '''Kits'''. Select your active Kit, probably ''Desktop (default)'' and set '''Qt version''' to your new Qt version.
+Qt Creator is now configured to use Qt5.
 
 === Optional: Add Qt Creator 2.7. to the KDE menu. ===
 Start '''kmenuedit'''. Click on '''Development''', click on '''New Item''', enter ''Qt Creator 2.7.1'' [or whatever you want the entry to be named]. In '''command''' enter ''/usr/local/QtCreator-2.7.1/bin/qtcreator'', chose an icon by clicking on the square button. Press OK and you are done.
