--- a/Qt%2FQt5.mw
+++ b/Qt%2FQt5.mw
@@ -7,7 +7,7 @@ Download the [http://download.qt-project.org/official_releases/qt/5.0/5.0.2/sing
 
 === All-in-one copy and paste command ===
 Run this in the folder where both archives are located:
-{{RootCmd|tar xvf qt-everywhere-opensource-src-5.0.2.tar.gz && cd qt-everywhere-opensource-src-5.0.2 && ./configure && make && make install && cd .. && tar xvf qt-creator-2.7.1-src.tar.gz && cd qt-creator-2.7.1-src && qmake -r && make && mkdir /usr/local/QtCreator-2.7.1 && make install INSTALL_ROOT{{=}}/usr/local/QtCreator-2.7.1}}
+{{RootCmd|tar xvf qt-everywhere-opensource-src-5.0.2.tar.gz && cd qt-everywhere-opensource-src-5.0.2 && ./configure && make && make install && echo -e 'PATH{{=}}/usr/local/Qt-5.0.2/bin:$PATH\nexport PATH' >> ~/.bashrc && source ~/.bashrc && cd .. && tar xvf qt-creator-2.7.1-src.tar.gz && cd qt-creator-2.7.1-src && qmake -r && make && mkdir /usr/local/QtCreator-2.7.1 && make install INSTALL_ROOT{{=}}/usr/local/QtCreator-2.7.1}}
 
 === Step by step. (The same as above) ===
 ==== Qt libs ====
@@ -22,6 +22,8 @@ Compile:
 Install:
 {{RootCmd|make install}}
 The default install folder is ''/usr/local/Qt-5.0.2''.
+Add new Qt5 libs to PATH so that other programs (i.e. the following compilation of qt creator) use the new version:
+{{Cmd|echo -e 'PATH{{=}}/usr/local/Qt-5.0.2/bin:$PATH\nexport PATH' >> ~/.bashrc && source ~/.bashrc}}
 
 ==== Qt Creator ====
 Extract archive:
