--- a/Arch_testing_guide.mw
+++ b/Arch_testing_guide.mw
@@ -24,7 +24,7 @@ An AT box should use a mix of reasonably stable global CFLAGS (no -funsafe-optim
 The official x86 AT FAQ suggests these flags:
 
 <pre>
-LDFLAGS="${LDFLAGS} -Wl,--hash-style=gnu
+LDFLAGS="-Wl,--hash-style=gnu ${LDFLAGS}"
 FEATURES="test collision-protect"
 </pre>
 
