/* Graphite / LTO / OpenMP */

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -39,7 +39,7 @@ It is now time to emerge dev-libs/cloog and dev-libs/cloog-ppl. Once this is don
 
 Now it is now time to turn on ",-fopenmp -lgomp" within the LDFLAGS, and "-fopenmp, -floop-parallelize-all and -floop-parallelize-loops=4" within the CFLAGS.  Add openmp to the USE flags.  I think it is safe to also enable LTO at this point. The system resulting from the new "emerge -e world" should be fairly stable with minimal packages failing to compile.
 
-If you still experience massive failures while recompiling the system or world, or have a non-working system, you probably skiped one of these steps.
+If you still experience massive failures while recompiling the system or world, or have a non-working system, you probably skipped one of these steps.
 
 {{Note|If your system fails to compile, you can blame Elv13 for forgotting one of the steps when he wrote this advice.}}
 
