Remove g-w.com reference

--- a/Arch_testing_guide.mw
+++ b/Arch_testing_guide.mw
@@ -14,7 +14,7 @@ Recommended tools are:
 |-
 | tatt || arch testing tool || [https://github.com/tom111/tatt/blob/master/manual.org tatt's manpage]
 |-
-| eix || useful utilities for package searching || [http://en.gentoo-wiki.com/wiki/Eix Community Gentoo Wiki article]
+| eix || useful utilities for package searching || [[Eix]]
 |-
 | ccache || compiler cache || [http://linux.die.net/man/1/ccache ccache's manpage]
 |}
